# RAGDoll

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
analysis/opus48-nist-22topic/: README.md  assemble_nist.py  build_retry.py  opus48_nist_verdicts.jsonl  summary.md  topics_22_fromscratch.txt
data/trec-rag-2024/human-support-labels/: rag24_human_support_labels.jsonl
data/trec-rag-2025/human-support-labels/: rag25_human_support_labels_without_unjudged_sentences.jsonl
docs/: reproduction_side-by-side_arena.md  reproduction_trec-rag_2024.md  reproduction_trec-rag_2024_support.md
examples/: topics.researchrubrics.sample.jsonl
src/pi_trec/: cli.py  config.py  jsonl.py  nuggetizer.py  prompts.py  pyserini_wrapper.py  runner.py  support.py  topics.py  umbrela.py
src/pi_trec/arena/: __init__.py
src/pi_trec/nuggetizer/: metrics.py
src/pi_trec/rubric/: __init__.py
src/pi_trec/support/: __init__.py  assignments.py  metrics.py
src/ragdoll/: cli.py  config.py
src/ragdoll/arena/: __init__.py  flows.py  prompts.py  stages.py
tests/: test_arena.py  test_cli_smoke.py  test_config.py  test_nuggetizer.py  test_prompt_provenance.py  test_runner.py  test_support.py  test_topics.py  test_umbrela.py
tests/fixtures/upstream/nuggetizer/: creator_template.yaml
